refactored version with jQUery plugin

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,11 @@
 	<script	 src ="scripts/redishttp.js" ></script>
 </head>
 <body>
-
-<head>
+<header>
 <div class="page">
 <h2 id="redishttp_is_just_a_fun_simple_php_script_that_exposes_redis_over_http">RedisHTTP is just a fun simple PHP script that exposes Redis over HTTP</h2>
 </div>
-</head>
+</header>
 <div id="content">
 <div class="page" id="home">
 <section>
